package com.scribehealth.model;

public enum SessionStatus {
    IDLE,
    RECORDING,
    PROCESSING,
    COMPLETED
}
